# wc-sharp

./: .gitignore  .travis.yml  CMakeLists.txt  Configuration.cs  Connection.cs  Doxyfile  Error.cs  Thread.cs  WheelMovement.cs  WheelMovement_Configuration.cs  WheelPIDController.cs  index.html  params.json
examples/: CMakeLists.txt  ExampleThread.cs  examples.csproj
html/: _configuration_8cs.html  _connection_8cs.html  _error_8cs.html  _error_8cs.js  _thread_8cs.html  _wheel_movement_8cs.html  _wheel_movement___configuration_8cs.html  _wheel_p_i_d_controller_8cs.html  annotated.html  annotated.js  class_w_c_1_1_configuration-members.html  class_w_c_1_1_configuration.html  class_w_c_1_1_configuration.js  class_w_c_1_1_connection-members.html  class_w_c_1_1_connection.html  class_w_c_1_1_connection.js  class_w_c_1_1_thread-members.html  class_w_c_1_1_thread.html  class_w_c_1_1_thread.js  class_w_c_1_1_wheel_movement___configuration-members.html  class_w_c_1_1_wheel_movement___configuration.html  class_w_c_1_1_wheel_movement___configuration.js  class_w_c_1_1_wheel_p_i_d_controller-members.html  class_w_c_1_1_wheel_p_i_d_controller.html  class_w_c_1_1_wheel_p_i_d_controller.js  classes.html  files.html  files.js  functions.html  functions_func.html  functions_prop.html  graph_legend.html  index.html  namespace_w_c.html  namespace_w_c.js  namespacemembers.html  namespacemembers_enum.html  namespacemembers_eval.html  namespaces.html  namespaces.js  (+5 more)
html/search/: all_63.js  all_64.js  all_65.js  all_67.js  all_74.js  all_75.js  all_77.js  classes_63.js  classes_74.js  (+21 more)
